--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+h2 {
+  text-align: center;
+}
+h3 {
+  text-align: left;
+}
 p {
-    color: yellow;
-    background-color: black;
+  font-size: 1.5em;
 }
